2004-01-07  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/amcompile.am: New.
	* configure.ac: Add subdir-objects, AM_PROG_CC_C_O.

2003-12-17  Joel Sherrill <joel@OARcorp.com>

    * aclocal/version.m4: Updated to rtems-20031217-test.

2003-12-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Use $(mkdir_p) instead of $(mkinstalldirs).

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Remove stray '/' in PROJECT_LIB.
	* wrapup/Makefile.am: Remove duplicate $(PROJECT_LIB) rule.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Add PROJECT_LIB.
	* wrapup/Makefile.am: Use $(PROJECT_LIB) instead of ${PROJECT_RELEASE}/lib.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* wrapup/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reworked.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/lead-dot.m4: Remove (Use the version in automake-1.8).
	* automake/lib.am: Remove $(project_libdir)$(MULTISUBDIR).
	* aclocal/env-rtemscpu.m4: Reflect new definition of project_lib.
	* Makefile.am: Remove BUILT_SOURCES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Add $(ARCH)/$(dirstamp) rules.
	* wrapup/Makefile.am: Reflect $(dirstamp) changes.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add $(dirstamp) to preinstallation rules.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/lead-dot.m4: New (from automake-1.7f).
	* aclocal/rtems-top.m4: Require AM_SET_LEADING_DOT.
	Add AC_SUBST(dirstamp).

2003-11-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect having removed