@@ -28,42 +28,42 @@ LIBS += ../libcsupport/$(ARCH)/libcsupport.a
 
 LIBS += ../libblock/$(ARCH)/libblock.a
 if !UNIX
-LIBS += ../libfs/src/dosfs/$(ARCH)/libdosfs.a
+LIBS += ../libfs/$(ARCH)/libdosfs.a
 endif
-LIBS += ../libfs/src/imfs/$(ARCH)/libimfs.a
+LIBS += ../libfs/$(ARCH)/libimfs.a
 
-LIBS += ../libmisc/monitor/$(ARCH)/libmonitor.a
-LIBS += ../libmisc/untar/$(ARCH)/libuntar.a
-LIBS += ../libmisc/stackchk/$(ARCH)/libstackchk.a
-LIBS += ../libmisc/cpuuse/$(ARCH)/libcpuuse.a
-LIBS += ../libmisc/rtmonuse/$(ARCH)/librtmonuse.a
+LIBS += ../libmisc/$(ARCH)/libmonitor.a
+LIBS += ../libmisc/$(ARCH)/libuntar.a
+LIBS += ../libmisc/$(ARCH)/libstackchk.a
+LIBS += ../libmisc/$(ARCH)/libcpuuse.a
+LIBS += ../libmisc/$(ARCH)/librtmonuse.a
 
 ## XXX temporarily removed because it causes a
 ## XXX number of BSPs to not link "main(){}" used by autoconf
 # if LIBSERDBG
-# LIBS += ../libmisc/serdbg/$(ARCH)/libserdbg.a
+# LIBS += ../libmisc/$(ARCH)/libserdbg.a
 # endif
 
 if LIBSHELL
-LIBS += ../libmisc/shell/$(ARCH)/libshell.a
+LIBS += ../libmisc/$(ARCH)/libshell.a
 endif
 
-LIBS += ../libmisc/dumpbuf/$(ARCH)/libdumpbuf.a
-LIBS += ../libmisc/devnull/$(ARCH)/libdevnull.a
-LIBS += ../libmisc/dummy/$(ARCH)/libdummy.a
-LIBS += ../libmisc/mw-fb/$(ARCH)/libmw-fb.a
-LIBS += ../libmisc/capture/$(ARCH)/libcapture.a
-LIBS += ../libmisc/fsmount/$(ARCH)/libfsmount.a
+LIBS += ../libmisc/$(ARCH)/libdumpbuf.a
+LIBS += ../libmisc/$(ARCH)/libdevnull.a
+LIBS += ../libmisc/$(ARCH)/libdummy.a
+LIBS += ../libmisc/$(ARCH)/libmw-fb.a
+LIBS += ../libmisc/$(ARCH)/libcapture.a
+LIBS += ../libmisc/$(ARCH)/libfsmount.a
 
 if HAS_NETWORKING
 LIBS += ../libnetworking/$(ARCH)/libnetworking.a
-LIBS += ../libnetworking/lib/$(ARCH)/lib.a
-LIBS += ../libnetworking/libc/$(ARCH)/lib.a
+LIBS += ../libnetworking/$(ARCH)/libc.a
+LIBS += ../libnetworking/$(ARCH)/lib.a
 endif
 
 if LIBRPC
-LIBS += ../librpc/src/rpc/$(ARCH)/librpc.a
-LIBS += ../librpc/src/xdr/$(ARCH)/libxdr.a
+LIBS += ../librpc/$(ARCH)/librpc.a
+LIBS += ../librpc/$(ARCH)/libxdr.a
 endif
 
 $(LIBS): $(ARCH)/$(dirstamp)
